[gd_scene load_steps=2 format=2]

[ext_resource path="res://Exercicio S5.gd" type="Script" id=1]

[node name="Exercicio S5" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 53.0
margin_top = 297.0
margin_right = 340.0
margin_bottom = 370.0
text = "Botao 1"

[node name="Button2" type="Button" parent="."]
margin_left = 55.0
margin_top = 394.0
margin_right = 342.0
margin_bottom = 467.0
text = "Botao 2"

[node name="Button3" type="Button" parent="."]
margin_left = 54.0
margin_top = 503.0
margin_right = 341.0
margin_bottom = 576.0
text = "Botao 3"

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 498.0
margin_top = 172.0
margin_right = 720.0
margin_bottom = 256.0
text = "Label1"

[node name="Label2" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 496.0
margin_top = 294.0
margin_right = 718.0
margin_bottom = 378.0
text = "Label2
"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 64.0
margin_top = 112.0
margin_right = 326.0
margin_bottom = 216.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
